--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
       <version>0.9.5.5</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.16</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
