--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-agroal</artifactId>
+      <version>5.4.10.Final</version>
+      <type>pom</type>
+    </dependency>
+
   </dependencies>
 
   <build>
